--- a/dashboard.html
+++ b/dashboard.html
@@ -9,8 +9,11 @@
 <body>
     <header>
         <h1>Bienvenido al Dashboard</h1>
-        <button id="btn-cato">Modo CATO (Con Nombre)</button>
-        <button id="btn-chan">Modo CHAN (Anónimo)</button>
+        <div>
+            <button id="btn-cato">Modo CATO (Con Nombre)</button>
+            <button id="btn-chan">Modo CHAN (Anónimo)</button>
+        </div>
+        <img id="img-modo" src="libro.png" alt="Imagen de modo" />
     </header>
 
     <main>
@@ -24,11 +27,15 @@
 
         document.getElementById('btn-cato').addEventListener('click', () => {
             modoAnonimo = false;
+            document.body.classList.remove('modo-oscuro'); // Elimina el modo oscuro
+            document.getElementById('img-modo').src = 'libro.png'; // Imagen para modo CATO
             alert('Modo CATO activado. Los posts mostrarán tu nombre.');
         });
 
         document.getElementById('btn-chan').addEventListener('click', () => {
             modoAnonimo = true;
+            document.body.classList.add('modo-oscuro'); // Activa el modo oscuro
+            document.getElementById('img-modo').src = 'anonimo.png'; // Imagen para modo CHAN
             alert('Modo CHAN activado. Los posts serán anónimos.');
         });
 
