--- a/dashboard.html
+++ b/dashboard.html
@@ -150,7 +150,7 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenido al Dashboard</h1>
+        <h1>Bienvenido a CATO CHAN</h1>
         <div>
             <button id="btn-cato">Modo CATO (Con Nombre)</button>
             <button id="btn-chan">Modo CHAN (Anónimo)</button>
